# rust-snake-game

./: Cargo.toml  Game.toml
src/: config.rs  draw.rs  game.rs  main.rs  score.rs  snake.rs  text_renderer.rs
