[package]
authors = ["Lucas Caro <lucascaro@gmail.com>"]
edition = "2018"
name = "snake"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "0.3.0"
piston_window = "0.117.0"
rand = "0.8.2"
serde = "1.0.123"
serde_derive = "1.0.123"
toml = "0.5.8"
